# sui-agent-commerce

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SUBMISSION_FORM_FIELDS.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.venv-test/: pyvenv.cfg
agent/: __init__.py  buyer.py  cli.py  seller.py  walrus_bridge.py
docs/: demo.html
move/: Move.toml
move/sources/: commerce.move
sui_agent_commerce/: __init__.py  cli.py
tests/: test_agent.py
