[project]
name = "sui-agent-commerce"
version = "0.1.0"
description = "Autonomous AI agents that buy and sell services on Sui. Built for Sui Overflow 2026 Agentic Web."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
